--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="sketch.js"></script>
       <script src="player.js"></script>
         <script src="coins.js"></script>
+        <script src="enemy.js"></script>
 
 
 </body></html>
