--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
     <script src="p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
-
+    <style>
+    body {
+      background-image: url('image/bg2.gif');
+    }
+    </style>
   </head>
   <body>
     <script src="sketch.js"></script>
